--- a/src/assignment01/mainWindow.fxml
+++ b/src/assignment01/mainWindow.fxml
@@ -6,7 +6,10 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.RadioMenuItem?>
+<?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -44,6 +47,18 @@
                 <MenuItem fx:id="generateMazeMenuButton" mnemonicParsing="false" onAction="#generateMaze" text="Generate Maze" />
                   <MenuItem fx:id="clearMazeMenuButton" mnemonicParsing="false" onAction="#clearMaze" text="Clear Maze" />
                   <MenuItem fx:id="solveMazeMenuButton" mnemonicParsing="false" onAction="#solveMaze" text="Solve Maze" />
+                  <SeparatorMenuItem mnemonicParsing="false" />
+                  <Menu mnemonicParsing="false" text="Set Pixel Size">
+                    <items>
+                        <RadioMenuItem fx:id="pixelSize5" mnemonicParsing="false" onMenuValidation="#setPixelSize5" text="5">
+                           <toggleGroup>
+                              <ToggleGroup fx:id="pixelSizeGroup" />
+                           </toggleGroup>
+                        </RadioMenuItem>
+                        <RadioMenuItem fx:id="pixelSize10" mnemonicParsing="false" onMenuValidation="#setPixelSize10" selected="true" text="10" toggleGroup="$pixelSizeGroup" />
+                        <RadioMenuItem fx:id="pixelSize20" mnemonicParsing="false" onMenuValidation="#setPixelSize20" text="20" toggleGroup="$pixelSizeGroup" />
+                    </items>
+                  </Menu>
               </items>
             </Menu>
           <Menu mnemonicParsing="false" text="Help">
